--- a/wp-content/themes/webnew/resources/assets/config.json
+++ b/wp-content/themes/webnew/resources/assets/config.json
@@ -2,9 +2,7 @@
   "entry": {
     "main": [
       "./scripts/main.js",
-      "./styles/main.scss",
-      "./styles/home.scss",
-      "./styles/test.scss"
+      "./styles/main.scss"
     ],
     "customizer": [
       "./scripts/customizer.js"
@@ -15,8 +13,6 @@
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": [
-    "app/**/*.php",
-    "config/**/*.php",
-    "resources/views/**/*.php"
+    "app/**/*.php"
   ]
 }
